# fortune-mod

./: .OLD-gitignore  .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.asciidoc  CREDITS.asciidoc  LICENSE  README.asciidoc  README.md
.github/workflows/: use-github-actions.yml  windows-x64.yml  windows-x86.yml
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: fortune-mod-test.1625605930603.pdom  fortune-mod-test.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/.projects/fortune-mod-test/: .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/fortune-mod-test/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/fortune-mod-test/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.root/: 7.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.mpc.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
CI-testing/: continuous-integration-testing.pl  gh-actions--windows-yml--from-p5-UV.yml  translate-travis.yml-to-github-actions.py
fortune-mod/: .clang-format  .tidyallrc  CMakeLists.txt  ChangeLog  INDEX  INSTALL  INSTALL.asciidoc  Makefile  Notes  Offensive  README  TODO  config.h.in  cookie-files  fortune.desktop  old-INSTALL  run-tests.pl  ver.txt
fortune-mod/cmake/: rinutils_bootstrap.cmake  shlomif_common_bootstrap.cmake
fortune-mod/datfiles/: CMakeLists.txt  Makefile  art  ascii-art  computers  cookie  debian  definitions  disclaimer  drugs  education  ethnic  food  fortunes  goedel  humorists  kids  knghtbrd  law  linux  linuxcookie  literature  love  magic  medicine  men-women  miscellaneous  news  paradoxum  people  perl  pets  platitudes  politics  pratchett  riddles  rules-of-acquisition  science  shingeki-no-kyojin  songs-poems  (+8 more)
fortune-mod/datfiles/data/: rules-of-acquisition-gen.pl  rules-of-acquisition-gen.sh  rules-of-acquisition.csv
fortune-mod/datfiles/html/: Makefile
fortune-mod/datfiles/off/: CMakeLists.txt  Makefile
fortune-mod/datfiles/off/unrotated/: art  astrology  atheism  black-humor  cookie  debian  definitions  drugs  ethnic  fortunes  hphobia  knghtbrd  limerick  linux  misandry  miscellaneous  misogyny  politics  privates  racism  religion  riddles  sex  shingeki-no-kyojin  songs-poems  vulgarity  zippy
fortune-mod/fortune/: Makefile  fortune-man.part1  fortune-man.part2  fortune.6  fortune.c  gen-fortune-docbook-page.pl  gen-fortune-man-page.pl  gen-randstr-manpage.pl  gen-strfile-manpage.pl  process-fortune-man-template.pl
fortune-mod/tests/: fortune-m-test.py  trailing-space-and-CRs.pl
fortune-mod/tests/data/: valgrind.t
fortune-mod/tests/scripts/: OLD-AND-UNUSED--check-fortune-file.sh  check-fortune-file.sh  split-valgrind.pl
fortune-mod/tests/t/: check-cookies.t  check-rinutils.t  test-fortune-h-flag.t  test-fortune-m--wetpaint.t  test-fortune-m.t  test-fortune-o-flag.t  test-fortune-o-rot.t  test-fortune-percent.t  tidyall.t  trailing-space-and-CRs.t  valgrind.t
fortune-mod/tests/t/lib/: FortTestInst.pm
fortune-mod/util/: FortuneMod_GenManPage_App.pm  Makefile  README.randstr  README.rot  find_duplicate_fortunes.py  fortmod_gen_manpage.pl  fortune-clean.py  fortune-mod-common.h  fortune-util-set-outfn.h  fortune-util.h  getopt.c  getopt.h  randstr.c  randstr.docbook5.xml  randstr.man  rot.c  rot.pl  strfile.8  strfile.c  strfile.docbook5.xml  strfile.h  strfile.man  unstr.c
fortune-mod/util/FortuneMod/ManPage/Generate/: App.pm
scripts/: Tatzer  run-build-and-tests-inside-docker.pl
scripts/debian-packaging/: build-fortune-mod-debian-package--using-docker.pl  build-rinutils-debian-package--using-docker.pl  docker-test.pl  pbuilderrc  test-debian-package-using-docker.pl
